alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: "DM Sans", sans-serif;
   overflow-x: hidden;
@@ -306,8 +307,7 @@ p {
 }
 .highlights-text-description {
   color: #503172;
-  width: 80%;
-  margin: auto;
+
 }
 .fa-solid {
   font-size: 30px;
@@ -518,6 +518,7 @@ p {
 
 .map-heading h3 {
   color: #fff;
+  font-size: 1.1rem;
 }
 #plans .map-heading h3 {
   color: #303030;
@@ -531,11 +532,12 @@ p {
 }
 
 .map-wrapper {
-  width: 100%;
+  width: 90%;
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 650px;
+  height: 550px;
   border-radius: 20px;
   /* overflow: hidden; */
 }
@@ -569,12 +571,12 @@ p {
   flex-direction: row-reverse;
   gap: 15px;
   align-items: center;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
 }
 
 .map-content div img {
-  width: 30px;
+  width: 20px;
 }
 
 /* Map end */
@@ -587,7 +589,7 @@ p {
 
 .plans-wrapper {
   display: flex;
-  gap: 50px;
+  gap: 80px;
   text-align: center;
   justify-content: center;
 }
@@ -667,13 +669,12 @@ p {
 
 .footer-cols {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   /* align-items: center; */
 }
 .column {
   color: white;
   padding: 0 12px;
-  width: 25%;
   font-size: 16px;
 }
 .column div h4 {
